--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <header class="header_index"> 
-        <nav class="navbar">
-            <img src="img/1486564177-finance-finance-calculator_81497.png" alt="">
-            <ul class="navbar__list">
-                <li><a href="index.html" class="navbar__link">Home</a></li>
-                <li><a href="pages/nosotros.html" class="navbar__link">Sobre mí</a></li>
-                <li><a href="pages/servicios.html" class="navbar__link">Servicios</a></li>
-                <li><a href="pages/contacto.html" class="navbar__link">Contacto</a></li>
-                <li><a href="pages/novedades.html" class="navbar__link">Novedades</a></li>
+    <header class="header"> 
+        <nav class="header__navbar">
+            <img src="img/1486564177-finance-finance-calculator_81497.png" alt="" class="header__navbar--img">
+            <ul class="header__navbar-list">
+                <li><a href="index.html" class="header__navbar-link">Home</a></li>
+                <li><a href="pages/nosotros.html" class="header__navbar-link">Sobre mí</a></li>
+                <li><a href="pages/servicios.html" class="header__navbar-link">Servicios</a></li>
+                <li><a href="pages/contacto.html" class="header__navbar-link">Contacto</a></li>
+                <li><a href="pages/novedades.html" class="header__navbar-link">Novedades</a></li>
             </ul>
         </nav>
-        <h1 class="navbar__texto">Hugo Luna</h1>
-        <p class="navbar__texto">Contador público</p>
+        <h1 class="header__navbar-texto">Hugo Luna</h1>
+        <p class="header__navbar-texto">Contador público</p>
     </header>
     
     <footer class="footer">
         <p>Hugo Luna - Contador público</p>
-        <ul class="lista_redes">
+        <ul class="lista-redes">
             <li>
                 <a href="https://www.facebook.com/" target="blank">
-                    <img src="https://cdn.icon-icons.com/icons2/555/PNG/128/facebook_icon-icons.com_53612.png" alt="" class="footer__imagen">
+                    <img src="https://cdn.icon-icons.com/icons2/555/PNG/128/facebook_icon-icons.com_53612.png" alt="" class="lista-redes__imagen">
                 </a>
             </li>
             <li>
                 <a href="https://ar.linkedin.com/" target="blank">
-                    <img src="https://cdn.icon-icons.com/icons2/555/PNG/128/linkedin_icon-icons.com_53609.png" alt="Logo linkedin" class="footer__imagen">
+                    <img src="https://cdn.icon-icons.com/icons2/555/PNG/128/linkedin_icon-icons.com_53609.png" alt="Logo linkedin" class="lista-redes__imagen">
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/?hl=es-la" target="blank">
-                    <img src="https://cdn.icon-icons.com/icons2/836/PNG/128/Instagram_icon-icons.com_66804.png" alt="Logo instagram" class="footer__imagen">
+                    <img src="https://cdn.icon-icons.com/icons2/836/PNG/128/Instagram_icon-icons.com_66804.png" alt="Logo instagram" class="lista-redes__imagen">
                 </a>
             </li>
         </ul>
